# Sharded-KV-store

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml
.github/classroom/: autograding.json
client_runner/: client_getter.sh  client_getter2.sh  client_getter3.sh  client_getter4.sh  client_putter.sh  client_putter2.sh  client_putter3.sh  client_putter4.sh
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  spell.cmake  variables.cmake
rocksdb/: Makefile  sti2qTcg
rocksdb/util/: build_version.cc
scripts/: message_hdr.py  trace_generator.py  txn_format_pb2.py  write_txn.py
source/: CMakeLists.txt  client.cpp  client_2.cpp  client_message.proto  client_thread.h  hostip.cpp  kv_store.h  master_server.cpp  server.cpp  server_message.proto  server_thread.cpp  shared.cpp  shared.h
source/workload_traces/: 12K_traces.txt  generate_traces.cpp  generate_traces.h  load_txn.cpp  load_txn.h  txn_format.proto  txn_trace_dump.cpp
tests/: Makefile  socketsupport.py  test_shard_join.py  test_sharding.py  test_single_shard.py  test_two_shards.py  testsupport.py
